# rust-developer

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-developer.code-workspace
.direnv/: flake-profile-1-link  flake-profile-2-link
.githooks/: pre-commit
files/: Cargo.toml  README.md
lesson01/: README.md
lesson01/src/: main.rs
lesson02/: Cargo.toml  README.md
lesson02/src/: main.rs
lesson05/: Cargo.toml  README.md
lesson05/src/: main.rs
lesson07/: Cargo.toml  README.md
lesson07/src/: main.rs
lesson09/: .gitignore  Cargo.toml  README.md
lesson09/src/: lib.rs  main.rs
lesson11/: README.md
lesson11/chat_library/: Cargo.toml
lesson11/chat_library/src/: main.rs
lesson11/client/: Cargo.toml
lesson11/client/src/: main.rs
lesson11/server/: Cargo.toml  README.md
lesson11/server/src/: main.rs
lesson11/shared/: Cargo.toml  README.md
lesson11/shared/src/: lib.rs
lesson13/: README.md
lesson13/client13/: Cargo.toml  README.md
lesson13/client13/files/: Cargo.toml
lesson13/client13/src/: main.rs
lesson13/server13/: Cargo.toml
lesson13/server13/src/: main.rs
lesson13/shared13/: Cargo.toml
lesson13/shared13/src/: lib.rs
lesson15/: .gitignore  Cargo.toml  README.md
lesson15/files/: Cargo.toml
lesson15/src/: lib.rs
lesson16/: Cargo.toml  README.md
lesson16/src/: lib.rs
lesson17/: README.md  docker-compose.yml
lesson18/: Cargo.toml  README.md
lesson18/docker/: docker-compose.yml  prometheus.yml
lesson18/src/: lib.rs
src/: main.rs
